# kb-plugin

./: LICENSE  README.md  SYNC.md
.claude-plugin/: marketplace.json
.github/workflows/: publish-pypi.yml
cli/: README.md  pyproject.toml
cli/kb/: cache.py  cli.py  config.py  kb  output.py
cli/kb/client/: __init__.py  contexts.py  http.py
cli/kb/commands/: _crud.py  _preflight_render.py  access.py  account_plan.py  action.py  activity.py  agent.py  approval.py  auth.py  browser.py  budget.py  card.py  cashflow.py  comment.py  company.py  compliance.py  conflict.py  content.py  context.py  contract.py  conversation.py  credential.py  dashboard.py  document.py  drift.py  entity_state.py  espera.py  feedback.py  gate.py  group.py  industry_pack.py  infra.py  interaction.py  invoice.py  issue.py  learning.py  legal_entity.py  line_item.py  lint.py  meeting.py  (+36 more)
plugins/kb/.claude-plugin/: claude-md-template.md  marketplace-README.md  plugin.json
plugins/kb/agents/: account-planner.md  app-builder.md  aprendizaje-writer.md  browser-navigator.md  calendar-discoverer.md  cierre-scanner.md  code-implementer.md  code-publisher.md  code-reviewer.md  codebase-navigator.md  content-summarizer.md  core-developer.md  crm-creator.md  dashboard-builder.md  deal-analyzer.md  design-reader.md  doc-writer.md  domain-drift-detector.md  domain-extractor.md  email-persister.md  email-reader.md  equipo-feedback.md  erp-reporter.md  estrategia-reader.md  external-searcher.md  feedback-collector.md  feedback-intake.md  feedback-solicitor.md  feedback-triager.md  financial-analyst.md  gap-analyzer.md  issue-analyzer.md  issue-writer.md  kb-healer.md  kb-resumen.md  matriz-eisenhower.md  meeting-parser.md  meeting-persister.md  meeting-researcher.md  meeting-synthesizer.md  (+17 more)
plugins/kb/agents/shared/: activity-credentials.md  content-protocol.md  doc-first-protocol.md  espera-protocol.md  file-delivery.md  (+10 more)
(+33 files in other folders)
