[project]
name = "kb-cli"
version = "0.2.0"
description = "CLI for the KB platform — HTTP client for the hosted Django REST API"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.24.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kb*"]
exclude = ["tests*"]

[project.scripts]
kb = "kb.cli:main"
