[project]
name = "alzadi-kb"
version = "0.2.0"
description = "CLI for the Alzadi KB platform — multi-tenant HTTP client for the hosted Django REST API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Alzado AI"}]
keywords = ["kb", "knowledge-base", "cli", "alzadi", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.24.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/alzado-AI/kb-plugin"
Repository = "https://github.com/alzado-AI/kb-plugin"
Issues = "https://github.com/alzado-AI/kb-plugin/issues"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kb*"]
exclude = ["tests*"]

[project.scripts]
kb = "kb.cli:main"
